# Local-NotebookLM

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  config.py  config.yaml  docker-compose.yml  example_config.json  main.py  processor.py  pyproject.toml  requirements.txt  server.py  setup.py  start.py  test.py
.github/workflows/: python-publish.yml
docker/: Dockerfile  docker-compose.yml  requirements.txt  server.py  web_ui.py
local_notebooklm/: config.py  processor.py  server.py  start.py  web_ui.py
local_notebooklm/steps/: helpers.py  prompts.py  step1.py  step2.py  step3.py  step4.py
steps/: config.yaml  helpers.py  prompts.py  step1.py  step2.py  step3.py  step4.py  system_prompts.py
